--- a/Milestone_01.ipynb
+++ b/Milestone_01.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1340,7 +1340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1505,6 +1505,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**In this step, We dropped features that are unsuitable for regression modeling due to their lack of predictive value or general relevance. Unique identifiers such as parcelid and id were removed because they are specific to each property and carry no significant information required for prediction. Coded text fields like propertyzoningdesc and propertycountylandusecode were excluded due to their high cardinality and lack of standardized interpretation, which would require external reference tables to be meaningful. We also removed features like transactiondate, rawcensustractandblock, and censustractandblock, which are either too granular or not representative of significant property characteristics. Additionally, assessmentyear was nearly constant across observations and thus offers no variation for modeling. Lastly, We dropped taxdelinquencyflag and taxdelinquencyyear due to high missingness and limited relevance within a single snapshot of data. Dropping these features helps streamline the dataset and improve model interpretability and generalizability.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Part 3.B: Drop **features** with \"too many\" null values\n",
     "\n",
     "Your code in the next cell(s). Make a judgement call about what \"too many\" means and briefly describe your reasoning in the discussion.   \n",
@@ -1514,10 +1521,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropping 23 features with greater than 70% missing values.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def drop_missing_features(df, threshold=0.7):   #As more than 70% of the data is missing\n",
+    "    missing_ratio = df.isnull().mean()\n",
+    "    to_drop = missing_ratio[missing_ratio > threshold].index\n",
+    "    print(f\"Dropping {len(to_drop)} features with greater than {int(threshold*100)}% missing values.\")\n",
+    "    return df.drop(columns=to_drop)\n",
+    "\n",
+    "df_cleaned_3b = drop_missing_features(df_cleaned_3a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1525,6 +1548,13 @@
    "source": [
     "#### **3.B Discussion:** In a paragraph, explain your decision about which features were dropped\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**To clean the dataset more effectively, We dropped features with more than 70% missing values. This threshold was chosen to keep a balance between removing features that are missing most of the informative data and retaining potentially valuable variables that might otherwise be lost with a more aggressive cutoff. At this level, 23 features were removed. These included variables such as basementsqft, finishedsquarefeet13, and various pooltypeid columns, which had very limited coverage and would be unreliable or required for the model. Retaining features with excessive missing data can introduce noise, bias, or instability into the regression model. By filtering them out early, We’ve simplified the data structure and improved the foundation for further preprocessing and model training.**"
    ]
   },
   {
