--- a/Milestone_01.ipynb
+++ b/Milestone_01.ipynb
@@ -1425,7 +1425,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**The target variable \"taxvaluedollarcnt\", displays a right skewed distribution, with the majority of properties valued under $500,000 and a long tail of high value homes extending well beyond one million. This shows the presence of significant outliers, which could disturb model training if not addressed through transformation or capping. The feature \"bedroomcnt\" generally shows that home value increases with the number of bedrooms. however, beyond 6 bedrooms, the relationship weakens and becomes more predictable due to the rarity of such large homes. The \"regionidzip\" feature reveals substantial geographic variation in home values. Certain ZIP codes consistently show higher median property values, indicating that location is a strong predictor of home price. Lastly, \"lotsizesquarefeet\" is also highly skewed, with most properties clustered around smaller lot sizes and a few very large lots is showing the distribution’s tail. These outliers may benefit from log or binning. We chose these features because they are both highly relevant to real estate pricing and shows distinct patterns that will help in feature engineering and model selection.**"
+    "**The target variable \"taxvaluedollarcnt\", displays a right skewed distribution, with the majority of properties valued under $500,000 and a long tail of high value homes extending well beyond one million. This shows the presence of significant outliers, which could disturb model training if not addressed through transformation or capping.**\n",
+    "\n",
+    "\n",
+    "**The bedroomcnt feature appeared more discrete and bell-shaped, with most homes having between 2 and 4 bedrooms, indicating that this is a reliable and normally distributed categorical variable.. however, beyond 6 bedrooms, the relationship weakens and becomes more predictable due to the rarity of such large homes.**\n",
+    "\n",
+    "**The \"regionidzip\" feature reveals substantial geographic variation in home values. Certain ZIP codes consistently show higher median property values, indicating that location is a strong predictor of home price. Lastly, \"lotsizesquarefeet\" is also highly skewed, with most properties clustered around smaller lot sizes and a few very large lots is showing the distribution’s tail. These outliers may benefit from log or binning. We chose these features because they are both highly relevant to real estate pricing and shows distinct patterns that will help in feature engineering and model selection.**\n",
+    "\n",
+    "Lot Size:\n",
+    "1. Highly right-skewed and non-normal. Long-tailed distribution -> possibly exponential\n",
+    "2. Most values were clustered at the lower end and a few extreme outliers stretched into the millions.\n",
+    "3. The graph looks interesting because of its shape.\n",
+    "\n",
+    "Bedroom Count:\n",
+    "1. Looks like an unimodal distribution. Majoirty of them have 2-4 bedrooms.\n",
+    "2. Outliers -> 6 rooms ?\n",
+    "3. The room numbers are direcly related to the tax value."
    ]
   },
   {
@@ -1460,23 +1475,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dropped features. Remaining columns: 47\n"
+      "Dropped features. Remaining columns: 42\n"
      ]
     }
    ],
    "source": [
     "def drop_features(df):\n",
     "    cols_to_drop = [\n",
-    "        'parcelid', 'id', 'propertyzoningdesc', 'propertycountylandusecode',\n",
-    "        'transactiondate', 'rawcensustractandblock', 'censustractandblock',\n",
-    "        'assessmentyear', 'taxdelinquencyflag', 'taxdelinquencyyear'\n",
+    "    'parcelid',\n",
+    "    'rawcensustractandblock',  \n",
+    "    'censustractandblock',  \n",
+    "    'regionidcity', 'regionidcounty', 'regionidneighborhood', 'regionidzip',  \n",
+    "    'assessmentyear',  \n",
+    "    'propertycountylandusecode', 'propertyzoningdesc',  \n",
+    "    'taxdelinquencyflag', 'taxdelinquencyyear',  \n",
+    "    'fireplaceflag'\n",
     "    ]\n",
     "    df_dropped = df.drop(columns=[col for col in cols_to_drop if col in df.columns])\n",
     "    return df_dropped\n",
@@ -1484,6 +1504,53 @@
     "# Apply to original dataframe\n",
     "df_cleaned_3a = drop_features(df)\n",
     "print(\"Dropped features. Remaining columns:\", df_cleaned_3a.shape[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial column count: 55\n",
+      "Initial column names:\n",
+      "['parcelid', 'airconditioningtypeid', 'architecturalstyletypeid', 'basementsqft', 'bathroomcnt', 'bedroomcnt', 'buildingclasstypeid', 'buildingqualitytypeid', 'calculatedbathnbr', 'decktypeid', 'finishedfloor1squarefeet', 'calculatedfinishedsquarefeet', 'finishedsquarefeet12', 'finishedsquarefeet13', 'finishedsquarefeet15', 'finishedsquarefeet50', 'finishedsquarefeet6', 'fips', 'fireplacecnt', 'fullbathcnt', 'garagecarcnt', 'garagetotalsqft', 'hashottuborspa', 'heatingorsystemtypeid', 'latitude', 'longitude', 'lotsizesquarefeet', 'poolcnt', 'poolsizesum', 'pooltypeid10', 'pooltypeid2', 'pooltypeid7', 'propertycountylandusecode', 'propertylandusetypeid', 'propertyzoningdesc', 'rawcensustractandblock', 'regionidcity', 'regionidcounty', 'regionidneighborhood', 'regionidzip', 'roomcnt', 'storytypeid', 'threequarterbathnbr', 'typeconstructiontypeid', 'unitcnt', 'yardbuildingsqft17', 'yardbuildingsqft26', 'yearbuilt', 'numberofstories', 'fireplaceflag', 'assessmentyear', 'taxdelinquencyflag', 'taxdelinquencyyear', 'censustractandblock', 'taxvaluedollarcnt']\n",
+      "Columns that exist and will be dropped: 8\n",
+      "['parcelid', 'propertyzoningdesc', 'propertycountylandusecode', 'rawcensustractandblock', 'censustractandblock', 'assessmentyear', 'taxdelinquencyflag', 'taxdelinquencyyear']\n",
+      "Columns after drop: 47\n",
+      "Final column names:\n",
+      "['airconditioningtypeid', 'architecturalstyletypeid', 'basementsqft', 'bathroomcnt', 'bedroomcnt', 'buildingclasstypeid', 'buildingqualitytypeid', 'calculatedbathnbr', 'decktypeid', 'finishedfloor1squarefeet', 'calculatedfinishedsquarefeet', 'finishedsquarefeet12', 'finishedsquarefeet13', 'finishedsquarefeet15', 'finishedsquarefeet50', 'finishedsquarefeet6', 'fips', 'fireplacecnt', 'fullbathcnt', 'garagecarcnt', 'garagetotalsqft', 'hashottuborspa', 'heatingorsystemtypeid', 'latitude', 'longitude', 'lotsizesquarefeet', 'poolcnt', 'poolsizesum', 'pooltypeid10', 'pooltypeid2', 'pooltypeid7', 'propertylandusetypeid', 'regionidcity', 'regionidcounty', 'regionidneighborhood', 'regionidzip', 'roomcnt', 'storytypeid', 'threequarterbathnbr', 'typeconstructiontypeid', 'unitcnt', 'yardbuildingsqft17', 'yardbuildingsqft26', 'yearbuilt', 'numberofstories', 'fireplaceflag', 'taxvaluedollarcnt']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 1: See original column count\n",
+    "print(\"Initial column count:\", df.shape[1])\n",
+    "print(\"Initial column names:\")\n",
+    "print(df.columns.tolist())\n",
+    "\n",
+    "# Step 2: Define columns you want to drop\n",
+    "cols_to_drop = [\n",
+    "    'parcelid', 'id', 'propertyzoningdesc', 'propertycountylandusecode',\n",
+    "    'transactiondate', 'rawcensustractandblock', 'censustractandblock',\n",
+    "    'assessmentyear', 'taxdelinquencyflag', 'taxdelinquencyyear'\n",
+    "]\n",
+    "\n",
+    "# Step 3: Check which of those columns actually exist\n",
+    "existing_to_drop = [col for col in cols_to_drop if col in df.columns]\n",
+    "print(f\"Columns that exist and will be dropped: {len(existing_to_drop)}\")\n",
+    "print(existing_to_drop)\n",
+    "\n",
+    "# Step 4: Drop them\n",
+    "df_cleaned_3a = df.drop(columns=existing_to_drop)\n",
+    "\n",
+    "# Step 5: Check result\n",
+    "print(\"Columns after drop:\", df_cleaned_3a.shape[1])\n",
+    "print(\"Final column names:\")\n",
+    "print(df_cleaned_3a.columns.tolist())"
    ]
   },
   {
@@ -1497,6 +1564,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "1. parcelid - Unique ID, not predictive\n",
+    "2. rawcensustractandblock, censustractandblock  - Coded geographic identifier, not interpretable without external context\n",
+    "3. regionidcity, regionidcounty, regionidneighborhood, regionidzip - Categorical region codes with limited modeling value unless processed\n",
+    "3. assessmentyear - Often constant\n",
+    "4. propertycountylandusecode, propertyzoningdesc - Text-based codes that are hard to interpret without mapping\n",
+    "5. taxdelinquencyflag, taxdelinquencyyear - May not affect tax value prediction directly\n",
+    "6. fireplaceflag - Redundant with 'fireplacecnt'\n",
+    "\n",
     "**In this step, We dropped features that are unsuitable for regression modeling due to their lack of predictive value or general relevance. Unique identifiers such as parcelid and id were removed because they are specific to each property and carry no significant information required for prediction. Coded text fields like propertyzoningdesc and propertycountylandusecode were excluded due to their high cardinality and lack of standardized interpretation, which would require external reference tables to be meaningful. We also removed features like transactiondate, rawcensustractandblock, and censustractandblock, which are either too granular or not representative of significant property characteristics. Additionally, assessmentyear was nearly constant across observations and thus offers no variation for modeling. Lastly, We dropped taxdelinquencyflag and taxdelinquencyyear due to high missingness and limited relevance within a single snapshot of data. Dropping these features helps streamline the dataset and improve model interpretability and generalizability.**"
    ]
   },
@@ -1513,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
