--- a/Milestone_01.ipynb
+++ b/Milestone_01.ipynb
@@ -1213,7 +1213,7 @@
     "- propertyzoningdesc\n",
     "- fireplaceflag\n",
     "- taxdelinquencyflag\n",
-    "- regionidcounty\n",
+    "- regionidcounty (This has no missing data and only 3 unique features. So we added it as categorical feature)\n",
     "\n"
    ]
   },
@@ -1230,7 +1230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Yes, columns like \"parcelid\" and \"id\" serve as unique identifiers for each row and provide no predictive value. Similarly, text fields like \"propertycountylandusecode\" and/or \"rawcensustractandblock\" may be difficult to interpret without external context or mapping tables and may be excluded unless used into more useful features.**"
+    "**Yes, columns like \"parcelid\" serve as unique identifiers for each row and provide no predictive value. Similarly, text fields like \"propertycountylandusecode\" and/or \"rawcensustractandblock\" may be difficult to interpret without external context or mapping tables and may be excluded unless used into more useful features.**"
    ]
   },
   {
@@ -1262,7 +1262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Yes, features such as parcelid or transactiondate often have extremely high cardinality. Many unique values with little repetition which makes them poor predictors.**"
+    "**Yes, features such as parcelid often have extremely high cardinality. Many unique values with little repetition which makes them poor predictors.**"
    ]
   },
   {
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1748,7 +1748,7 @@
     "    return df_imputed\n",
     "\n",
     "df_cleaned_3d = impute_data(df_cleaned_3c)\n",
-    "print(\"Remaining missing values:\", df_cleaned_3d.isnull().sum().sum())\n",
+    "print(\"Remaining missing values:\", df_cleaned_3d.isna().values.sum())\n",
     "\n",
     "\n"
    ]
@@ -1778,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1786,7 +1786,7 @@
      "output_type": "stream",
      "text": [
       "Categorical columns to encode: []\n",
-      "Shape after encoding: (75369, 24)\n"
+      "Shape after encoding: (76109, 24)\n"
      ]
     }
    ],
